# django-tasks-cloud

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml
aws/: apps.py  backends.py  temp.py
azure/: apps.py
base/: models.py
scripts/: dist.sh
settings/: settings.py  urls.py
src/django_tasks_cloud/aws/: apps.py
src/django_tasks_cloud/azure/: apps.py
src/django_tasks_cloud/azure/backends/: sa_queue.py  service_bus.py
src/django_tasks_cloud/base/: apps.py
